# bazel-external-data

./: .bazelrc  .external_data_cli_proxy.py  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  clear.sh  expose_all_files.bzl  external_data.bzl  extract_archive.py
.github/workflows/: main.yaml
bazel_external_data/: BUILD.bazel  check.py  cli.py  config_helpers.py  core.py  download.py  hashes.py  squash.py  upload.py  util.py
bazel_external_data/backends/: BUILD.bazel  __init__.py  girder.py  http.py  mock.py  s3.py
bazel_external_data/backends/test/: README.md  girder_test.py  girder_test_runner.sh  http_test.py
bazel_external_data/backends/test/docker_girder/: Dockerfile  docker-compose.yml  setup_server.py  setup_server.yml
docs/: README.md  setup.md  testing.md  workflows.md
docs/config/: external_data.package.yml  external_data.project.yml  external_data.user.yml
setup/: pip_requirements.txt
setup/ci/common/: bazel.rc  install_prereqs.sh  test.sh
setup/ubuntu/: deb_install  install_prereqs
src/bazel_external_data/: BUILD.bazel  check.py  cli.py  config_helpers.py  core.py  download.py  hashes.py  upload.py  util.py
src/bazel_external_data/backends/: BUILD.bazel  __init__.py
test/: BUILD.bazel  external_data_workspace_test.bzl  external_data_workspace_test.sh  run_tests.sh  workflows_test.sh  workspace_test.bzl  workspace_test.sh
test/bazel_pkg_advanced_test/: BUILD.bazel  WORKSPACE  test_basics.py
test/bazel_pkg_advanced_test/data/: BUILD.bazel  glob_1.bin.sha512
test/bazel_pkg_advanced_test/tools/: BUILD.bazel  path.bzl
test/bazel_pkg_downstream_test/: BUILD.bazel  WORKSPACE  test_basics.py
test/bazel_pkg_test/: BUILD.bazel  WORKSPACE  test_basics.py
test/bazel_pkg_test/data/: BUILD.bazel  basic.bin.sha512
test/external_data_pkg_test/: .bazelrc  .external_data.yml  BUILD.bazel  WORKSPACE  drake_path.bzl  repo_example.bzl  test_basics.py  workflows_test.sh
test/external_data_pkg_test/data/: BUILD.bazel  archive.tar.gz.manifest.bzl  archive.tar.gz.sha512  check_only.bin.sha512  executable.bin.sha512
test/external_data_pkg_test/tools/: BUILD.bazel  external_data  external_data.bzl
test/workspaces/: BUILD.bazel  WORKSPACE  simple_test.sh
test/workspaces/bazel_pkg_advanced_test/: .external_data.yml  WORKSPACE  workflows_test.sh
test/workspaces/bazel_pkg_advanced_test/data/: BUILD.bazel  basic.bin.sha512  glob_2.bin.sha512  glob_3.bin.sha512
test/workspaces/bazel_pkg_advanced_test/data/subdir/: extra.bin.sha512
test/workspaces/bazel_pkg_advanced_test/tools/: BUILD.bazel  external_data  external_data.bzl  external_data.user.yml  path.bzl
test/workspaces/bazel_pkg_downstream_test/: WORKSPACE
test/workspaces/bazel_pkg_test/: .external_data.yml  README.md  WORKSPACE
test/workspaces/bazel_pkg_test/data/: BUILD.bazel
test/workspaces/bazel_pkg_test/tools/: external_data.bzl
tools/: macros.bzl
