# -*- python -*-

load(":expose_all_files.bzl", "expose_all_files")

package(default_visibility = ["//visibility:public"])

# Declared here to permit easier access to `cli` from external projects.
py_binary(
    name = "cli",
    srcs = ["//bazel_external_data:cli.py"],
    deps = [
        "//bazel_external_data:core",
        "//bazel_external_data:cli_base",
    ],
    visibility = ["//visibility:public"],
)

# Declared for archive stuff (should generally be internal).
py_binary(
    name = "extract_archive",
    srcs = ["extract_archive.py"],
)

exports_files(
    srcs = ["exec.sh"],
)

# Bazel does not let us glob into `test/**`, even though the workspaces are not
# a package of this workspace. The solution is to declare the lint tests
# externally.
expose_all_files(
    sub_packages = ["bazel_external_data"],
    # We do not care about `test` for direct consumption, so do not expose it.
)

# Linting is not done here to simplify test dependencies.
# See :test/BUILD.bazel for how it is done.
