# -*- python -*-

load("//:expose_all_files.bzl", "expose_all_files")

# Use relative package path, as `py_library` does not like absolute package
# paths. This ensures that `//src` is added to `PYTHONPATH`.
imports = ["../.."]

py_library(
    name = "core",
    srcs = [
        "__init__.py",
        "mock.py",
    ],
    imports = imports,
    deps = [
        "//bazel_external_data:core",
    ],
)

py_library(
    name = "girder",
    srcs = ["girder.py"],
    deps = [":core"],
)

py_library(
    name = "http",
    srcs = ["http.py"],
    deps = [":core"],
)

py_library(
    name = "backends",
    imports = imports,
    visibility = ["//bazel_external_data:__subpackages__"],
    deps = [
        ":core",
        ":girder",
        ":http",
    ],
)

py_test(
    name = "girder_test",
    srcs = ["test/girder_test.py"],
    tags = ["manual"],
    deps = [
        ":girder",
    ],
)

py_test(
    name = "http_test",
    srcs = ["test/http_test.py"],
    deps = [
        ":backends",
    ],
)

expose_all_files(sub_dirs = ["test"])
