# @note 'core' has no backends present.
py_library(
    name = "core",
    srcs = [
        "config_helpers.py",
        "core.py",
        "util.py",
        "hashes.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "cli_base",
    srcs = [
        "download.py",
        "upload.py",
        "check.py",
    ],
    deps = [
        ":core",
        "//src/bazel_external_data/backends",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

# Declare 'cli' in //:, to permit easier access to the binary from external
# repos.
exports_files(
    srcs = ["cli.py"],
)

alias(
    name = "cli",
    actual = "//:cli",
)
