# -*- python -*-

load("@bazel_external_data_pkg//:expose_all_files.bzl", "expose_all_files")

filegroup(
    name = "external_data_sentinel",
    srcs = [':.external_data.yml'],
    visibility=["//:__subpackages__"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    data = [
        "//data",
        "mock",  # Directory.
    ],
    size = "small",
    visibility = ["//visibility:public"],
)

expose_all_files(
    sub_packages = ["data", "tools"],
    sub_dirs = ["mock"],
)
