# -*- python -*-

load("@bazel_external_data_pkg//:expose_all_files.bzl", "expose_all_files")
load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "py_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
    visibility = ["//visibility:private"],
)

py_runtime_pair(
    name = "py_runtime_pair",
    py3_runtime = ":py_runtime",
    visibility = ["//visibility:private"],
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
    visibility = ["//visibility:public"],
)

exports_files(
    srcs = [".external_data.yml"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "test_basics",
    size = "small",
    srcs = ["test_basics.py"],
    data = [
        "mock",  # Directory.
        "//data",
        "@repo_archive//:data",
    ],
    visibility = ["//visibility:public"],
)

expose_all_files(
    sub_dirs = ["mock"],
    sub_packages = [
        "data",
        "tools",
    ],
)
